# lm-studio-setup

./: .gitignore  Makefile  README.md  pyproject.toml
config/: lmstudio-qwen.json
docs/: model-choice.md
src/lmstudio_setup/: __init__.py  catalog.py  catalog_builder.py  codex_launcher.py  constants.py  ensure_cli.py  lmstudio.py  local_models.py  paths.py  process.py  repo_tools.py  toml_edit.py
